# synmetrix-python-client

./: .cursorrules  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: test.yml
docs/: api_reference.md
docs/src/synmetrix_graphql_client/: auth.html
docs/src/synmetrix_python_client/: auth.html
docs/synmetrix_graphql_client/: auth.html
docs/synmetrix_graphql_client/graphql_client/: client.html
examples/: upload_data_models.py  utils.py
scripts/: generate_api_docs.py  generate_auth_api_docs.sh  generate_graphql_api_docs.sh  push_to_pypi.sh  push_to_testpypi.sh
src/synmetrix_graphql_client/: auth.py  scripts.py
src/synmetrix_graphql_client/graphql/: accessLists.gql  branches.gql  explorations.gql  teams.gql  users.gql  versions.gql
src/synmetrix_graphql_client/graphql_client/: __init__.py  access_list.py  all_access_lists.py  all_data_schemas.py  all_data_sources.py  all_logs.py  all_schemas.py  async_base_client.py  base_model.py  check_connection.py  client.py  create_access_list.py  create_alert.py  create_branch.py  create_data_source.py  create_exploration.py  create_report.py  create_team.py  create_version.py  credentials.py  current_data_source.py  current_exploration.py  current_log.py  current_team.py  current_user.py  current_version.py  datasources.py  delete_access_list.py  delete_alert.py  delete_credentials.py  delete_data_source.py  delete_member.py  delete_report.py  delete_schema.py  delete_team.py  edit_team.py  export_data.py  fetch_meta.py  fetch_tables.py  fragments.py  (+25 more)
src/synmetrix_python_client/: auth.py  scripts.py
src/synmetrix_python_client/graphql/: alerts.gql  branches.gql  currentUser.gql  datasources.gql  reports.gql  schemas.gql  sqlCredentials.gql
src/synmetrix_python_client/graphql_client/: __init__.py  access_list.py  all_access_lists.py  all_data_schemas.py  all_logs.py  (+60 more)
synmetrix_graphql_client/: auth.py  queries.graphql  scripts.py
synmetrix_graphql_client/graphql/: createBranch.gql  members.gql  queryLogs.gql  schemas.gql  versionDocs.gql
synmetrix_graphql_client/graphql_client/: __init__.py  access_list.py  all_access_lists.py  all_data_schemas.py  all_data_sources.py  all_logs.py  all_schemas.py  check_connection.py  client.py  create_access_list.py  create_alert.py  create_branch.py  create_data_source.py  create_exploration.py  create_report.py  create_team.py  create_version.py  credentials.py  current_data_source.py  current_exploration.py  current_log.py  current_team.py  current_user.py  current_version.py  datasources.py  delete_access_list.py  delete_alert.py  delete_credentials.py  delete_data_source.py  delete_member.py  delete_report.py  delete_schema.py  delete_team.py  edit_team.py  enums.py  export_data.py  fetch_meta.py  fetch_tables.py  fragments.py  gen_data_schemas.py  (+24 more)
tests/: conftest.py
tests/integration/: test_auth.py  test_upload_data_models_integration.py
tests/unit/: test_auth.py  test_upload_data_models.py  test_upload_data_models_unit.py
(+4 files in other folders)
